<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <TextView
            android:id="@+id/expenditure_row_category"
            android:layout_width="86dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:text="@string/category"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.506" />

        <TextView
            android:id="@+id/category_row_amount"
            android:layout_width="42dp"
            android:layout_height="31dp"
            android:layout_marginStart="20dp"
            android:text="@string/amount"
            app:layout_constraintBottom_toBottomOf="@+id/expenditure_row_category"
            app:layout_constraintStart_toEndOf="@+id/expenditure_row_category"
            app:layout_constraintTop_toTopOf="@+id/expenditure_row_category"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/category_row_description"
            android:layout_width="202dp"
            android:layout_height="68dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/category_row_amount"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>